# cnake

./: .gitignore  CMakeLists.txt  main.c  utils.c  utils.h  world.c  world.h
